# lttng-tools

./: .gitignore  LICENSE  Makefile.am  configure.ac  test_relayd_pidfile.sh
doc/man/: lttng-relayd.8.txt
extras/bindings/swig/python/: lttng.i.in
extras/bindings/swig/python/tests/: tests.py
include/: Makefile.am  version.h
include/lttng/: event.h  lttng-error.h  lttng.h  rotate-internal.h  session.h
include/lttng/notification/: notification-internal.h
src/common/: Makefile.am  align.h  bitfield.h  bug.h  daemonize.c  defaults.h  error.c  error.h  lttng-elf.c  lttng-kernel.h  macros.h  mi-lttng-3.0.xsd  mi-lttng.c  mi-lttng.h  runas.c  runas.h  session-descriptor.c  time.c  time.h  unix.c  uri.c  utils.c  utils.h
src/common/compat/: Makefile.am  compat-epoll.c  compat-fcntl.c  compat-poll.c  directory-handle.c  directory-handle.h  paths.h  poll.h  tid.h  time.h  uuid.c  uuid.h
src/common/config/: config-session-abi.h  session-config.c  session.xsd
src/common/consumer/: consumer-metadata-cache.c  consumer-stream.c  consumer-stream.h  consumer-timer.c  consumer.c  consumer.h
src/common/hashtable/: hashtable.c  hashtable.h
src/common/index/: ctf-index.h  index.c  index.h
src/common/kernel-consumer/: kernel-consumer.c  kernel-consumer.h
src/common/kernel-ctl/: kernel-ctl.c  kernel-ctl.h  kernel-ioctl.h
src/common/relayd/: relayd.c  relayd.h
src/common/sessiond-comm/: inet.c  inet6.c  relayd.h  sessiond-comm.h
src/common/string-utils/: Makefile.am
src/common/ust-consumer/: Makefile.am  ust-consumer.c  ust-consumer.h
src/lib/lttng-ctl/: Makefile.am  channel.c  clear.c  deprecated-symbols.cpp  destruction-handle.c  lttng-ctl-helper.h  lttng-ctl.c  rotate.c
src/lib/lttng-ctl/filter/: filter-visitor-generate-bytecode.c  memstream.h
tests/destructive/: metadata-regeneration
tests/perf/: find_event.c  test_perf_raw.in
tests/regression/: Makefile.am  tests.serial
tests/regression/kernel/: Makefile.am  select_poll_epoll.c  test_clock_override  test_ns_contexts  test_ns_contexts_change  test_rotation_destroy_flush
tests/regression/tools/: Makefile.am
tests/regression/tools/crash/: test_crash
tests/regression/tools/exclusion/: test_exclusion
tests/regression/tools/filtering/: Makefile.am  tp.c  tp.h
tests/regression/tools/live/: Makefile.am
tests/regression/tools/metadata/: test_kernel  test_ust
tests/regression/tools/notification/: Makefile.am
tests/regression/tools/tracefile-limits/: test_tracefile_count
tests/regression/ust/: Makefile.am
tests/regression/ust/baddr-statedump/: Makefile.am
tests/regression/ust/daemon/: Makefile.am
tests/regression/ust/exit-fast/: Makefile.am
tests/regression/ust/fork/: Makefile.am
tests/regression/ust/high-throughput/: Makefile.am
tests/regression/ust/java-log4j/: test_java_log4j
tests/regression/ust/java-log4j2/: JTestLTTng.java  JTestLTTngLog4j2.java  Makefile.am  log4j2.xml  test_java_log4j2
tests/regression/ust/libc-wrapper/: Makefile.am
tests/regression/ust/linking/: Makefile.am
tests/regression/ust/low-throughput/: Makefile.am
tests/regression/ust/multi-lib/: Makefile.am
tests/regression/ust/multi-session/: Makefile.am
tests/regression/ust/namespaces/: test_ns_contexts  test_ns_contexts_change
tests/regression/ust/overlap/demo/: Makefile.am
tests/regression/ust/type-declarations/: Makefile.am
tests/stress/: launch_ust_app  test_multi_sessions_per_uid_10app  test_multi_sessions_per_uid_5app_streaming  test_multi_sessions_per_uid_5app_streaming_kill_relayd
tests/unit/: Makefile.am  test_event_rule.c  test_kernel_data.c  test_notification.c  test_session.c  test_string_utils.c  test_unix_socket.c  test_uri.c  test_ust_data.c  test_utils_compat_poll.c  test_utils_expand_path.c
tests/unit/ini_config/: ini_config.c
tests/utils/: utils.sh
tests/utils/tap/: tap.c  tap.h
tests/utils/testapp/: Makefile.am
tests/utils/testapp/gen-ns-events/: gen-ns-events.c
tests/utils/testapp/gen-syscall-events-callstack/: gen-syscall-events-callstack.c
tests/utils/testapp/gen-ust-events/: Makefile.am  gen-ust-events.c  tp.h
tests/utils/testapp/gen-ust-events-ns/: gen-ust-events-ns.c
tests/utils/testapp/gen-ust-nevents/: Makefile.am  tp.c  tp.h
tests/utils/testapp/gen-ust-nevents-str/: Makefile.am
tests/utils/testapp/gen-ust-tracef/: Makefile.am
tests/utils/testapp/userspace-probe-elf-binary/: foo.c  userspace-probe-elf-binary.c
tests/utils/testapp/userspace-probe-sdt-binary/: Makefile.am
